# cuttlefish

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: test.yml
ass/: __init__.py  build.py  cli.py  config.py  content.py  permalink.py  render.py  serve.py  taxonomy.py  template_deps.py
ass/scaffold/: __init__.py
ass/scaffold/site/: AGENTS.md  config.toml
ass/scaffold/site/content/blog/: second-post.md
ass/scaffold/site/templates/: base.html  blog.html  blog.index.html  home.html  project.html  project.index.html  taxonomy.html
cli/: index.html
configuration/: index.html
content/: index.html
deployment/: index.html
docs/: cli.md  configuration.md  content.md  deployment.md  getting-started.md  incremental-builds.md  index.md  recipes.md  templates.md  working-with-an-agent.md
getting-started/: index.html
incremental-builds/: index.html
recipes/: README.md  breadcrumb.md  index.html  reading-time.md
search/: search_index.json
src/ass/: build.py  cache.py  cli.py  config.py  content.py  errors.py  graph.py  permalink.py  render.py  serve.py  sitemap.py
src/ass/scaffold/site/: AGENTS.md  config.toml
src/ass/scaffold/site/content/blog/: hello-world.md
src/ass/scaffold/site/content/pages/: about.md
src/ass/scaffold/site/content/project/: ass.md
src/ass/scaffold/site/static/css/: main.css
src/ass/scaffold/site/templates/: base.html  page.html
src/cuttlefish/: __init__.py  build.py  cache.py  cli.py  config.py  content.py  errors.py  feed.py  graph.py  new.py  permalink.py  render.py  robots.py  serve.py  taxonomy.py  ui.py
src/cuttlefish/scaffold/: __init__.py
src/cuttlefish/scaffold/site/: AGENTS.md  config.toml
src/cuttlefish/scaffold/site/content/blog/: hello-world.md  second-post.md
src/cuttlefish/scaffold/site/content/project/: cuttlefish.md  example-project.md
src/cuttlefish/scaffold/site/static/css/: main.css
src/cuttlefish/scaffold/site/templates/: 404.html  base.html  blog.html  blog.index.html  home.html  project.html  project.index.html  taxonomy.html  taxonomy.index.html
templates/: index.html
tests/: conftest.py  test_build.py  test_config.py  test_content.py  test_end_to_end.py  test_feed.py  test_incremental.py  test_new.py  test_permalink.py  test_render.py  test_robots.py  test_sitemap.py  test_taxonomy.py  test_units.py
working-with-an-agent/: index.html
