[project]
name = "cuttlefish-ssg"
version = "0.1.2"
description = "Describe your site. An agent builds it."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1",
    "mistune>=3.0",
    "typer>=0.12",
    "rich>=13.0",
    "watchfiles>=0.21",
]

[project.urls]
Homepage = "https://github.com/acaibowlz/cuttlefish"
Documentation = "https://acaibowlz.github.io/cuttlefish/"
Repository = "https://github.com/acaibowlz/cuttlefish"

[project.scripts]
ctf = "cuttlefish.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cuttlefish"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]
