[project]
name = "cuttlefish-ssg"
version = "0.1.4"
description = "Describe your site. An agent builds it."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1",
    "mistune>=3.0",
    "typer>=0.12",
    "rich>=13.0",
    "watchfiles>=0.21",
]

[project.urls]
Homepage = "https://github.com/acaibowlz/cuttlefish"
Documentation = "https://acaibowlz.github.io/cuttlefish/"
Repository = "https://github.com/acaibowlz/cuttlefish"

[project.scripts]
ctf = "cuttlefish.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cuttlefish"]

[tool.ruff]
# 100, not the 88 default: this code is authored to a ~90-100 budget (long
# error strings, frozenset literals), so 100 fits it with near-zero churn.
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"            # the codebase already uses double quotes
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false # a trailing comma pins a collection open, one per line
docstring-code-format = false     # docstrings hold +++/markdown examples, not Python

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes — unused imports/names, undefined names
    "I",  # isort — import sorting
    "UP", # pyupgrade — modernize syntax for target-version
    "B",  # flake8-bugbear — likely-bug patterns
]
ignore = [
    "E501", # line length is the formatter's job (it won't split long strings)
]

[tool.ruff.lint.flake8-bugbear]
# Typer's API *is* calling these in parameter defaults, so B008 (function call
# in default argument) is a false positive for them — whitelist, don't suppress.
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "ruff>=0.14",
]
